创建mcp服务时可以直接增加数据范围